--- a/package.json
+++ b/package.json
@@ -19,5 +19,19 @@
   "bugs": {
     "url": "https://github.com/skylinebin/PrivateEditor/issues"
   },
-  "homepage": "https://github.com/skylinebin/PrivateEditor#readme"
+  "homepage": "https://github.com/skylinebin/PrivateEditor#readme",
+  "devDependencies":{
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^8.0.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-istanbul": "^4.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.4.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow-vue": "^1.0.0",
+    "eslint": "^4.13.1"
+
+  }
 }
